--- a/resources/views/Widgets/Common/LinkListWidget.twig
+++ b/resources/views/Widgets/Common/LinkListWidget.twig
@@ -1,9 +1,10 @@
 {% set title = widget.settings.title.mobile %}
 {% set listEntries = [] %}
 
-{% for i in 1..3 %}
-    {% set name = widget.settings["name" ~ i].mobile %}
-    {% set url = widget.settings["url" ~ i].mobile %}
+{% for i in 1..5 %}
+    {% set entry = widget.settings["entry" ~ i] %}
+    {% set name = entry.name.mobile %}
+    {% set url = entry.url.mobile %}
 
     {% if name is not empty and url is not empty %}
         {% set listEntries = listEntries | merge([{ name: name, url: url }]) %}
@@ -16,7 +17,6 @@
     <div class="widget-inner">
         <nav>
             <h2 class="h5">{{ title }}</h2>
-
             {% if listEntries | length > 0 %}
                 <ul class="list-unstyled">
                     {% for entry in listEntries %}
