--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -312,7 +312,7 @@ html {
 html {
   font-size: 14px;
   -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -5601,7 +5601,7 @@ button.close {
   margin: 1px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   border: 1px solid #fff;
   border-radius: 10px;
 }
@@ -12711,7 +12711,7 @@ button:focus {
 }
 
 .btn-labeled.btn-link .btn-label {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   padding: 0.25rem 0;
 }
 
@@ -17034,7 +17034,7 @@ body.menu-is-visible {
   bottom: -2px;
   left: -1px;
   background-color: #fff;
-  box-shadow: 0 0 0 0 transparent;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   border: 1px solid transparent;
   transform-origin: top right;
   transform: scaleX(1) scaleY(1);
@@ -19828,7 +19828,7 @@ body.menu-is-visible {
 .gradient-hr {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, transparent, #DCDBD7, transparent);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #DCDBD7, rgba(0, 0, 0, 0));
 }
 
 .show-more-returns {
@@ -19938,6 +19938,30 @@ body.menu-is-visible {
   margin-bottom: 0;
 }
 
+.widget.widget-placeholder {
+  position: relative;
+  border: 3px dashed #dadae3;
+  border-radius: 3px;
+  height: 75px;
+  line-height: 75px;
+  vertical-align: middle;
+  text-align: center;
+  color: #dadae3;
+  font-size: 20px;
+  font-style: italic;
+}
+
+.widget.widget-placeholder:after {
+  content: 'Placeholder';
+  text-align: center;
+  display: block;
+  font-size: 20px;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 767px) {
   .widget {
     margin-bottom: 1rem;
@@ -20033,6 +20057,41 @@ body.menu-is-visible {
 .widget-grid.widget-grid-stacked .widget-inner:not(.widget-inner-stacked) {
   -ms-flex: 2;
       flex: 2;
+}
+
+.widget-grid.widget-primary {
+  color: #fff;
+  background-color: #008ebd;
+}
+
+.widget-grid.widget-secondary {
+  color: #fff;
+  background-color: #d4021d;
+}
+
+.widget-grid.widget-success {
+  color: #fff;
+  background-color: #7ED321;
+}
+
+.widget-grid.widget-info {
+  color: #fff;
+  background-color: #5bc0de;
+}
+
+.widget-grid.widget-warning {
+  color: #fff;
+  background-color: #f0ad4e;
+}
+
+.widget-grid.widget-danger {
+  color: #fff;
+  background-color: #d9534f;
+}
+
+.widget-grid.widget-inverse {
+  color: #fff;
+  background-color: #4D4F4D;
 }
 
 .widget-image-box > img {
@@ -20603,6 +20662,30 @@ body.menu-is-visible {
 .widget-text.widget-inverse {
   color: #fff;
   background-color: #4D4F4D;
+}
+
+.widget-list .widget-inner {
+  padding: 1rem 15px;
+}
+
+.widget-list .widget-inner .list-container {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.widget-link-list .widget-inner {
+  padding: 15px 15px 0 15px;
+}
+
+.widget-link-list .widget-inner h2 {
+  font-weight: 700;
+}
+
+.widget-link-list .widget-inner a {
+  color: #4D4F4D;
 }
 
 /*# sourceMappingURL=ceres.css.map */
