--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -44,36 +44,36 @@
 
     &.widget-primary
     {
-        @include widget-bg-variant($brand-primary);
+        @include widget-bg-pseudo($brand-primary)
     }
 
     &.widget-secondary
     {
-        @include widget-bg-variant($brand-secondary);
+        @include widget-bg-pseudo($brand-secondary)
     }
 
     &.widget-success
     {
-        @include widget-bg-variant($brand-success);
+        @include widget-bg-pseudo($brand-success);
     }
 
     &.widget-info
     {
-        @include widget-bg-variant($brand-info);
+        @include widget-bg-pseudo($brand-info);
     }
 
     &.widget-warning
     {
-        @include widget-bg-variant($brand-warning);
+        @include widget-bg-pseudo($brand-warning);
     }
 
     &.widget-danger
     {
-        @include widget-bg-variant($brand-danger);
+        @include widget-bg-pseudo($brand-danger);
     }
 
     &.widget-inverse
     {
-        @include widget-bg-variant($brand-inverse);
+        @include widget-bg-pseudo($brand-inverse);
     }
 }
