--- a/resources/scss/ceres/widgets/mixins/_widget-variant.scss
+++ b/resources/scss/ceres/widgets/mixins/_widget-variant.scss
@@ -3,3 +3,19 @@
     color: $text-color;
     background-color: $color;
 }
+
+@mixin widget-bg-pseudo($color, $text-color: #fff)
+{
+    position: relative;
+    color: $text-color;
+
+    &:before {
+        content: '';
+        position: absolute;
+        height: 100%;
+        width: calc(100% - 30px);
+        top: 0;
+        left: 15px;
+        background-color: $color;
+    }
+}
