Wrap shop builder footer in col

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -134,5 +134,11 @@
     </div>
 </div>
 {% else %}
-    {{ footerContainer | raw }}
+    <div class="container-max">
+        <div class="row">
+            <div class="col">
+                {{ footerContainer | raw }}
+            </div>
+        </div>
+    </div>
 {% endif %}
