--- a/resources/scss/ceres/views/PageDesign/_breadcrumb.scss
+++ b/resources/scss/ceres/views/PageDesign/_breadcrumb.scss
@@ -13,8 +13,15 @@
 		    background:$breadcrumb-bg;
 		    top:96px;
 		}
+		.breadcrumbs {
+			background: $breadcrumb-bg;
+		    z-index: 1000;
+
+			&.unfixed {
+				z-index: -1;
+			}
+		}
 		.breadcrumb{
-			margin-bottom: 0;
 			max-width: 1200px;
 		    margin: 0 auto;
 		    background: transparent;
