--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -9,6 +9,7 @@
 {{ component( "Ceres::PageDesign.Components.Popper" ) }}
 {{ component( "Ceres::Containers.Components.ContainerItemList" ) }}
 {{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+{{ component( "Ceres::Category.Components.CategoryBreadcrumbs" ) }}
 
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set defaultLanguage = services.webstoreConfig.getDefaultLanguage() %}
@@ -227,6 +228,55 @@
             }
         }
         calculateBodyOffset();
+
+
+        var unfixedElements = [];
+        function getUnfixedElements()
+        {
+            unfixedElements = [];
+            $('#page-header .unfixed').each(function(i, elem)
+            {
+                var rect = elem.getBoundingClientRect();
+                unfixedElements.push({
+                    element: elem,
+                    top: rect.top,
+                    height: rect.height
+                });
+            });
+            scrollUnfixedElements();
+        }
+
+        getUnfixedElements();
+
+        function scrollUnfixedElements()
+        {
+            var scrollTop = window.scrollY;
+            unfixedElements.forEach(function(unfixed)
+            {
+                var spacingTop = unfixed.height - scrollTop;
+                if ( !!unfixed.element.previousElementSibling )
+                {
+                    unfixed.element.previousElementSibling.style.marginBottom = (spacingTop >= 0 ? spacingTop : 0) + 'px'
+                }
+                else
+                {
+                    unfixed.element.parentElement.style.paddingTop = (spacingTop >= 0 ? spacingTop : 0) + 'px';
+                }
+                unfixed.element.style.position = 'absolute';
+                unfixed.element.style.top = unfixed.top - scrollTop + 'px';
+            });
+        }
+
+        $(window).scroll(scrollUnfixedElements);
+
+        $(document).on('shopbuilder.after.ready', function()
+        {
+            unfixedElements.forEach(function(unfixed)
+            {
+                $(unfixed.element).attr('css', '');
+            });
+            scrollUnfixedElements = function() {};
+        });
 
         $(document).on('shopbuilder.before.viewUpdate shopbuilder.after.viewUpdate', function()
         {
