--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
@@ -20,6 +20,7 @@
 	    display: flex;
 	    flex-flow: column nowrap;
         border-top: 1px solid $gray-lighter;
+        height: 100vh;
         @extend .small;
 
         dd, dt{
