--- a/resources/views/Basket/Components/BasketList.twig
+++ b/resources/views/Basket/Components/BasketList.twig
@@ -4,12 +4,12 @@
 
 <script type="x/template" id="vue-basket-list">
     <div>
-        <div style="overflow: auto; height: 250px">
+        <div class="split-basket-height">
             <transition-group name="wish-list-item-transition" tag="div">
                 <basket-list-item template="#vue-basket-list-item" v-for="basketItem in basketItems" :key="basketItem.id" :basket-item="basketItem" :size="size" language="{{ services.sessionStorage.getLang() }}"></basket-list-item>
             </transition-group>
         </div>
-        
+
         <div v-if="!isBasketInitiallyLoaded" class="basket-loading-frame loading">
             {% include "Ceres::ItemList.Partials.LoadingAnimation" %}
         </div>
