--- a/resources/views/Basket/Components/BasketTotals.twig
+++ b/resources/views/Basket/Components/BasketTotals.twig
@@ -4,7 +4,7 @@
     <!-- BASKET TOTALS -->
     <div class="cmp cmp-totals">
         <div class="h3">{{ trans("Ceres::Template.basketSum") }}</div>
-        <div class="component-loading with-icon refreshing" :class="{ 'isLoading': isBasketLoading }">
+        <div class="component-loading with-icon refreshing split-totals-height" :class="{ 'isLoading': isBasketLoading }">
             <dl>
                 {{ LayoutContainer.show("Ceres::BasketTotals.BeforeItemSum") }}
                 <dt :class="{ 'font-weight-bold': showNetPrices }">
