--- a/resources/scss/ceres/views/Templates/BasketTotalSum/_basket-total-sum.scss
+++ b/resources/scss/ceres/views/Templates/BasketTotalSum/_basket-total-sum.scss
@@ -47,8 +47,8 @@
 
 	hr {
 		@include media-breakpoint-down(xs) {
-			margin-top: 0;
-			margin-bottom: 0;
+			margin-top: 5px;
+			margin-bottom: 5px;
 		}
 	}
 
