--- a/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
+++ b/resources/scss/ceres/views/Templates/BasketItemList/_basket-list-item.scss
@@ -36,6 +36,10 @@
 		width: 300px;
 		font-weight: 700;
 		font-size: 80%;
+
+		@include media-breakpoint-down(sm) {
+			width: calc(100vw - 155px) !important;
+		}
 	}
 
 	&.basket-large {
@@ -106,8 +110,16 @@
 			margin-left: auto;
 			display: flex;
 
+			@include media-breakpoint-down(sm) {
+				display: block !important;
+			}
+
 			.qty-box-container {
 				margin: 0 10px;
+
+				@include media-breakpoint-down(sm) {
+					margin: 0 0 5px 27px; 
+				}
 			}
 
 			.price-box {
