--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -19,7 +19,7 @@
 
         <div class="row p-l-1 p-r-1">
             <!-- BASKET LIST -->
-            <div class="list col-sm-7 p-t-1">
+            <div class="list col-sm-7 col-md-12 p-t-1">
                 <div class="cmp cmp-basket-preview-list">
                     <basket-list template="#vue-basket-list" size="small"></basket-list>
                 </div>
@@ -27,7 +27,7 @@
             <!-- ./BASKET LIST -->
 
             <!-- BASKET PREVIEW BOTTOM -->
-            <div class="bg-faded totals col-sm-5 p-t-1">
+            <div class="bg-faded totals col-sm-5 col-md-12 p-t-1">
 
                 <basket-totals template="#vue-basket-totals"></basket-totals>
 
